@@ -388,10 +388,14 @@ event_loop (GstElement * pipeline, gboolean blocking, GstState target_state)
     /* check if we need to dump messages to the console */
     if (messages) {
       const GstStructure *s;
+      guint32 seqnum;
+
+      seqnum = gst_message_get_seqnum (message);
 
       s = gst_message_get_structure (message);
 
-      g_print (_("Got Message from element \"%s\" (%s): "),
+      g_print (_("Got Message #%" G_GUINT32_FORMAT
+              " from element \"%s\" (%s): "), seqnum,
           GST_STR_NULL (GST_ELEMENT_NAME (GST_MESSAGE_SRC (message))),
           gst_message_type_get_name (GST_MESSAGE_TYPE (message)));
       if (s) {
